# whisper_rs

./: Cargo.toml  README.md
src/: main.rs  multilingual.rs  pcm_decode.rs
src/whisper/: audio.rs  mod.rs  model.rs  quantized_model.rs
