[package]
name = "whisper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
anyhow = "1.0.82"
byteorder = "1.5.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
# candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
# candle-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-onnx = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
imageproc = "0.24.0"
memmap2 = "0.9.4"
rand = "0.8.5"
serde_json = "1.0.116"
symphonia = "0.5.4"
tokenizers = "0.19.1"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
